--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-03",
+  "name": "goit-react-hw-04",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "formic": "^0.0.10",
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-spinners": "^0.17.0",
     "yup": "^1.6.1",
     "yup-phone": "^1.3.2"
   },
